package com.cuidarmais.demo.Entities.EntityObjects.Enums;

public enum Role {
    
    ELDERLY,
    VOLUNTEER;

}