package com.cuidarmais.demo.Entities.EntityObjects.Enums;

public enum Status {
    
    AVAILABLE,
    ACCEPTED,
    COMPLETED,
    CANCELED

}
