package com.cuidarmais.demo.Entities.EntityObjects.Enums;

public enum SupportType {
  COMPANIONSHIP_AND_TRANSPORT,
  MAINTENANCE_AND_REPAIRS,
  TEACHING_AND_TECHNOLOGY,
  SOCIAL_ACTIVITIES,
  PHYSICAL_ACTIVITIES
}
