@startuml
class User {
  id: int
  firstName: string
  lastName: string
  username: string
  password: string
  email: string
  phone: int
  birthdate: date
  address: Address
  taskList: Task[]
  description: string
  role: Role
  createdAt: date
  profilePicture: byte[]
}

class Volunteer {
 supportTypes: SupportType[]
 rating: double
}

class Task {
  id: int
  title: string
  supportType: SupportType
  isOnline: boolean
  description: string
  date: date
  time: datetime
  city: string
  state: string
  status: string
  requestBy: Senior
  volunteer: Volunteer
  assessment: Assement | null
}

class Address {
  zip: string
  street: string
  number: string
  suite: string
  city: string
  district: string
  state: string
}

class Assement {
  grade: double
  comment: string
} 

enum Role {
  ELDERLY
  VOLUNTEER
}

enum SupportType {
  COMPANIONSHIP_AND_TRANSPORT
  MAINTENANCE_AND_REPAIRS
  TEACHING_AND_TECHNOLOGY : (online available)
  SOCIAL_ACTIVITIES : (online available)
  PHYSICAL_ACTIVITIES
}

enum Status {
  AVAILABLE,
  ACCEPTED,
  COMPLETED,
  CANCELED
}

Task "1" -- "1" Assement
SupportType "1" -- "*" Task
SupportType "*" -- "*" Volunteer : has
User "2" -- "*" Task
User "1" -- "1" Role : has
User "1" -- "1" Address : has
User <|-- Volunteer

@enduml
